--- a/dox/building.dox
+++ b/dox/building.dox
@@ -12,7 +12,7 @@ using CMake (https://cmake.org).
 
 The only dependencies are a C++ compiler (and standard libraries)
 capable of compiling C++11 (in particular, variadic templates)
-and CMake (v3.0.2 or above).
+and CMake (v3.1.3 or above).
 
 \section building_instructions Building
 
@@ -36,6 +36,15 @@ default static library.
 cmake -DCMAKE_BUILD_TYPE=Release \
       -DCMAKE_INSTALL_PREFIX=/path/to/install \
       -DBPHASH_BUILD_SHARED=True \
+      ../ 
+\endcode
+
+By default, BPHash is built with C++14. This can be controlled with the `CMAKE_CXX_STANDARD` option. For
+example, to build with only C++11
+
+\code{.sh}
+cmake -DCMAKE_BUILD_TYPE=Release \
+      -DCMAKE_CXX_STANDARD=11 \
       ../ 
 \endcode
 
